--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ button {
   }
 }
 </style>
-<a href="https://codepen.io/uiswarup/full/vYPxywO" target="_blank">
+<a href="https://www.facebook.com/CyR.Diggory/" target="_blank">
   <header class="top-header">
 </header>
 
@@ -564,7 +564,7 @@ button {
       <p class="message__text">We're sorry, the page you were looking for isn't found here. The link you followed may either be broken or no longer exists. Please try again, or take a look at our.</p>
     </div>
     <div class="error__nav e-nav">
-      <a href="http://www.thedresscounter.com" target="_blanck" class="e-nav__link"></a>
+      <a href="https://www.facebook.com/CyR.Diggory/" target="_blanck" class="e-nav__link"></a>
     </div>
   </div>
   <!-- END Content -->
